--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>Henry H. Choi</title>
 </head>
 <body>
- 
+ <img src="assets/images/spivak-calculus.jpg" alt="My test image">
 </body>
 </html>
