--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
  <title>Henry H. Choi</title>
 </head>
 <body>
- <img src="assets/images/spivak-calculus.jpg" alt="My test image">
+ <header>
+  <span>
+   <a href="/">Henry H. Choi</a>
+  </span>
+ </header>
+ <div>
+  <nav>
+   <ul>
+    <li>
+     <a href="/about">about</a>
+    </li>
+    <li>
+     <a href="/writings">writings</a>
+    </li>
+    <li>
+     <a href="/code">code</a>
+    </li>
+    <li>
+     <a href="/math">math</a>
+    </li>
+   </ul>
+  </nav>
+  <main>
+   <section style="margin: 1em">
+    <p> Hi my name is Henry Hyuntae Choi and I am a Ph.D. student in <a href="http://gspa.snu.ac.kr/kr">SNU GSPA</a>. I have interests in industrial organization policies. </p>
+    <p> I like to play basketball, and to watch NBA. I enjoy studying mathematical materials and I plan to post some notes about math stuffs in this website. Lastly I have interest in writing codes.</p>
+    <p> This is me at the basketball shop.</p>
+    <img src="/assets/images/people/IMG_7261.JPG" alt="It's me" width="300" height="400">
+    <p> You can reach me by email at wonderinghenry@gmail.com</p>
+   </section>
+  </main>
+ </div>
 </body>
 </html>
